tests/paczka1/fuzzy1/38632379.err
Error in line 5: MO4 A555 19,32
Error in line 27: viYx4 S755 88,6
Error in line 4: h7gYm8G A458 15,6
